[tool.poetry]
name = "tp_yass"
version = "0.0.1"
description = "臺北市高國中小網站集中化系統"
authors = ["William Wu <william@pylabs.org>"]

[tool.poetry.dependencies]
python = "^3.7"
invoke = "*"
pyramid = "*"
pyramid_beaker = "*"
pyramid_mailer = "*"
pyramid_jinja2 = "*"
PyMySQL = "*"
alembic = "*"
pyramid_retry = "*"
pyramid_sqlalchemy = "*"
pyramid_tm = "*"
passlib = "*"
pyramid_exclog = "*"
requests = "*"
pyramid_wtforms = "*"
wtforms = {extras = ["email"], version = "^2.3.1"}

[tool.poetry.dev-dependencies]
autopep8 = "*"
flake8 = "*"
mixer = "*"
pyramid_debugtoolbar = "*"
pyramid_ipython = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
rope = "*"
tox = "*"
WebTest = "*"
waitress = "*"
mycli = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
