[tool.poetry]
name = "tp_yass"
version = "0.0.1"
description = "臺北市高國中小網站集中化系統"
authors = ["William Wu <william@pylabs.org>"]

[tool.poetry.dependencies]
python = "^3.7"
invoke = "*"
pyramid = "^1.10"
pyramid_mailer = "*"
pyramid_jinja2 = "*"
PyMySQL = "*"
alembic = "*"
pyramid_retry = "*"
pyramid_sqlalchemy = "*"
pyramid_tm = "*"
passlib = "*"
requests = "*"
pyramid_wtforms = "*"
wtforms = {extras = ["email"], version = "*"}
email_validator = "*"
pillow = "*"
pyramid-session-redis = "*"

[tool.poetry.dev-dependencies]
autopep8 = "*"
flake8 = "*"
mixer = "*"
pyramid_debugtoolbar = "*"
pyramid_ipython = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
rope = "*"
tox = "*"
WebTest = "*"
waitress = "*"
mycli = "*"
Sphinx = "*"
pylint = "*"
pytest-datadir = "^1.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins."paste.app_factory"]
main = "tp_yass:main"

[tool.poetry.plugins."console_scripts"]
initialize_tp_yass_db = "tp_yass.scripts.initialize_db:main"
